--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "airtable": "^0.8.0",
     "buefy": "^0.8.8",
     "bulmaswatch": "^0.7.5",
     "core-js": "^3.4.3",
