--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "buefy": "^0.8.8",
     "bulmaswatch": "^0.7.5",
     "core-js": "^3.4.3",
+    "epic-spinners": "^1.1.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   },
