--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bulmaswatch": "^0.7.5",
     "core-js": "^3.4.3",
     "epic-spinners": "^1.1.0",
+    "marked": "^0.7.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   },
