--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "epic-spinners": "^1.1.0",
     "marked": "^0.7.0",
     "vue": "^2.6.10",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.1.3",
     "vue-scrollto": "^2.17.1",
     "vuex": "^3.1.2"
