Add cache on CI.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,3 +12,7 @@ deploy:
     - netlify deploy --site $NETLIFY_SITE_ID --auth $NETLIFY_AUTH_TOKEN --prod --message "Deploy via Gitlab Pipelines."
   only:
     - master
+  cache:
+    paths:
+      - node_modules/
+      - .yarn
