--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,6 @@ workflows:
   main:
     jobs:
       - deploy:
-          # filters:
-          #   branches:
-          #     only: master
+          filters:
+            branches:
+              only: master
