--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,9 @@ jobs:
       - node/with-cache:
           steps:
             - run: yarn install
+            - run: npm i netlify-cli
       - run: yarn build
+      - run: ./node_modules/.bin/netlify deploy --site $NETLIFY_SITE_ID --auth $NETLIFY_AUTH_TOKEN --prod --message "Deploy via Circle CI."
 
 workflows:
   main:
